# CR8

./: .devcontainer.json  .gitignore  Cargo.toml  README.md  Trunk.toml  spec.md  test.asm
.cargo/: config.toml
asm/: Cargo.toml  README.md  macros.asm  out  test.asm
asm/src/: args.rs  ast.rs  builtin.rs  compiler.rs  config.rs  expr.rs  lex.rs  lib.rs  main.rs  op.rs  reg.rs  std.asm  std.rs  token.rs
asm/src/builtin/core/: README.md  micro.asm  mod.asm  sys.asm
asm/src/builtin/core/macros/: call.asm  jmp.asm  logic.asm  mod.asm  send.asm  util.asm
asm/src/builtin/core/macros/math/: add.asm  mod.asm  sub.asm
asm/src/builtin/std/: mod.asm  sleep.asm
asm/src/builtin/std/gfx/: frame.asm  mod.asm  text.asm
asm/src/builtin/std/gfx/grid/: block.asm  inline_box.asm  mod.asm  point.asm
asm/src/builtin/std/gfx/grid/block/: bordered.asm  clear.asm  custom.asm  filled.asm  mod.asm  thick_bordered.asm
asm/src/builtin/std/math/mul/: mod.asm  mul.asm  mul16.asm
asm/src/builtin/std/math/shift/: lsh.asm  lsh16.asm  rsh.asm
asm/src/compile/: def_stmts.rs  expr.rs  macros.rs  mod.rs  num.rs  parse.rs  resolve_macros.rs  scan.rs  section.rs  stores.rs  use_files.rs
asm/src/compiler/: ast.rs  config.rs  debug.rs  mod.rs  tokenizer.rs
asm/src/compiler/builtin/: builtin.asm  mod.rs
asm/src/compiler/directive/: def.rs  import.rs  mac.rs  mod.rs  store.rs
asm/src/compiler/eval/: input.rs  instruction.rs  line.rs  mod.rs
asm/src/compiler/lex/: expr.rs  item.rs  lexable.rs  mod.rs  node.rs  pragma.rs
asm/src/compiler/lex/directive/: bytes.rs  import.rs  mac.rs  mod.rs
asm/src/compiler/lex/meta/: bytes.rs  import.rs  mac.rs  mod.rs
asm/src/compiler/lex/micro/: lex.rs  mod.rs
asm/src/compiler/lexer/: directive.rs  macros.rs  mod.rs  word.rs
asm/src/compiler/lexer/directive/: macros.rs  mod.rs
asm/src/compiler/lexv2/: expr.rs  lexable.rs  mod.rs
asm/src/compiler/lexv2/directive/: bytes.rs  mac.rs  mod.rs
asm/src/compiler/lexv2/tree/: item.rs  mod.rs
asm/src/compiler/micro/: control.rs  lex.rs  mod.rs
asm/src/compiler/parse/: expr.rs  input.rs  mod.rs
asm/src/compiler/resolver/: directives.rs  expr.rs  labels.rs  macros.rs  meta.rs  mod.rs
asm/src/core/: arch.asm  mod.asm
asm/src/core/macro/: call.asm  jmp.asm  logic.asm  send.asm
asm/src/core/macro/math/: mod.asm  sub.asm
asm/src/lex/: directive.rs  macros.rs  mod.rs  word.rs
asm/src/prelude/: mod.asm
asm/src/prelude/macro/: call.asm  jmp.asm  mod.asm  send.asm
asm/src/prelude/macro/math/: add.asm  mod.asm  sub.asm
asm/src/std/: arch.asm  macros.asm  math.asm  mod.asm  sleep.asm
asm/src/std/core/: mod.asm  sys.asm
asm/src/std/core/macro/: call.asm  logic.asm  mod.asm  send.asm
asm/src/std/core/macro/math/: add.asm  sub.asm
asm/src/std/gfx/: frame.asm  mod.asm
asm/src/std/gfx/grid/: cfg.asm  inline_box.asm  mod.asm
asm/src/std/gfx/grid/box/: bordered.asm  clear.asm  mod.asm
asm/src/std/macro/: call.asm  clear.asm  jmp.asm  logic.asm  mod.asm  send.asm  util.asm
asm/src/std/macro/math/: add.asm  mod.asm  sub.asm
asm/src/std/math/: mod.asm
asm/src/std/math/mul/: mod.asm  mul.asm  mul16.asm
asm/src/std/math/shift/: lsh.asm  lsh16.asm  mod.asm  rsh.asm  rsh16.asm
asm/src/std/wait/: mod.asm
asm/sys/: macros.asm  math.asm  static.asm
sim/: Cargo.toml
sim/src/: args.rs  config.rs  cr8.rs  device.rs  exec.rs  lib.rs  main.rs  test.rs
sim/src/cr8/: debug.rs  exec.rs  inst.rs  mem.rs  mod.rs  probe.rs
sim/src/cr8/mem/: bank.rs  mod.rs
sim/src/device/: gfx.rs  syscontrol.rs
sim/src/devices/: gfx.rs  keyboard.rs  mod.rs  rng.rs  sysctrl.rs
sim/src/runner/: base.rs  config.rs  gfx.rs  mod.rs
sim/src/runner/config/: jit.rs  mod.rs
sim/src/test/: mod.rs  util.rs
sim/web/: Cargo.toml  Trunk.toml  index.html  index.scss
sim/web/src/: main.rs
tool/macros/: Cargo.toml
tool/macros/src/: lib.rs  modules.rs
(+49 files in other folders)
