[package]
  name    = "asm"
  version = "0.1.0"
  edition = "2021"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  lazy_static = "1.4"
  util_macros = { path = "../utils/macros" }
  phf         = { version = "0.11.2", features = ["macros"] }
  regex       = "1.9"
  env_logger  = "0.10"
  log         = "0.4"
  anyhow      = "1.0.75"
  path-clean  = "1.0.1"
