[package]
    name    = "asm"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    lazy_static = "1.4"
    phf         = { version = "0.11.2", features = ["macros"] }
    regex       = "1.9"
    env_logger  = "0.10"
    log         = "0.4"
    path-clean  = "1.0.1"
    anyhow      = "1.0"
    serde       = { version = "1.0", features = ["derive"] }
    indexmap    = "2.0"
    macros      = { path = "../tool/macros" }
