[package]
  name    = "sim"
  version = "0.1.0"
  edition = "2021"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  anyhow        = "1.0.75"
  asm           = { path = "../asm" }
  util_macros   = { path = "../utils/macros" }
  typed-builder = "0.16"
  pixels        = "0.13"
winit = "0.28.6"

[features]
  default = ["sysctrl", "gfx"]
  sysctrl = []
  gfx     = []
