[package]
  name    = "sim"
  version = "0.1.0"
  edition = "2021"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  asm           = { path = "../asm" }
  util_macros   = { path = "../utils/macros" }
  anyhow        = "1.0.75"
  typed-builder = "0.16"
  env_logger    = "0.10.0"
  log           = "0.4.20"

[features]
  default  = []
  gfx      = []
  keyboard = []
  jit      = ["asm/full"]
