[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asm = { path = "../asm" }
rand = { version = "0.8.5", optional = true, features = ["getrandom"] }
getrandom = { version = "0.2.9", optional = true }
anyhow = "1.0.75"
typed-builder = "0.16"
env_logger = "0.10.0"
log = "0.4.20"

[features]
default = ["rng"]
gfx = []
keyboard = []
jit = []
rng = ["rand", "getrandom", "getrandom/js"]
