[package]
  name    = "web"
  version = "0.1.0"
  edition = "2021"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  gloo-timers = "0.3.0"
  web-sys = { version = "0.3.64", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'KeyboardEvent',
  ] }
  wasm-bindgen = "0.2.87"
  sim = { path = "..", features = ["gfx", "keyboard"] }
  gloo-events = "0.2.0"
  wasm-logger = "0.2.0"
  log = "0.4.20"
