[package]
name = "macros"
version = "0.1.0"
edition = "2021"


[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["proc-macro"] }
phf = { version = "0.11.2", features = ["macros"] }
